fixed text not showing forMVC count and needle over rotation when higher than MVC

--- a/www/css/physioBuddy.css
+++ b/www/css/physioBuddy.css
@@ -98,7 +98,11 @@
 
 .calibrate-content-pictures{
   text-align: center;
+}
 
+#mvcPrompt{
+  text-align: center;
+  word-break: keep-all;
 }
 
 .title {
